crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_groupuse.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "A",
                  "B"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 10,
                  "end": 14
                }
              },
              "alias": null,
              "span": {
                "start": 13,
                "end": 14
              }
            }
          ]
        }
      },
      "span": {
        "start": 6,
        "end": 17
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "A",
                  "B",
                  "C"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 21,
                  "end": 27
                }
              },
              "alias": null,
              "span": {
                "start": 24,
                "end": 27
              }
            },
            {
              "name": {
                "parts": [
                  "A",
                  "D"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 21,
                  "end": 30
                }
              },
              "alias": null,
              "span": {
                "start": 29,
                "end": 30
              }
            }
          ]
        }
      },
      "span": {
        "start": 17,
        "end": 33
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "A",
                  "B",
                  "C",
                  "D"
                ],
                "kind": "FullyQualified",
                "span": {
                  "start": 37,
                  "end": 46
                }
              },
              "alias": null,
              "span": {
                "start": 43,
                "end": 46
              }
            },
            {
              "name": {
                "parts": [
                  "A",
                  "B",
                  "E"
                ],
                "kind": "FullyQualified",
                "span": {
                  "start": 37,
                  "end": 49
                }
              },
              "alias": null,
              "span": {
                "start": 48,
                "end": 49
              }
            }
          ]
        }
      },
      "span": {
        "start": 33,
        "end": 52
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Function",
          "uses": [
            {
              "name": {
                "parts": [
                  "A",
                  "b",
                  "c"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 65,
                  "end": 71
                }
              },
              "alias": null,
              "span": {
                "start": 68,
                "end": 71
              }
            },
            {
              "name": {
                "parts": [
                  "A",
                  "d"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 65,
                  "end": 74
                }
              },
              "alias": null,
              "span": {
                "start": 73,
                "end": 74
              }
            }
          ]
        }
      },
      "span": {
        "start": 52,
        "end": 77
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Const",
          "uses": [
            {
              "name": {
                "parts": [
                  "A",
                  "B",
                  "C"
                ],
                "kind": "FullyQualified",
                "span": {
                  "start": 87,
                  "end": 94
                }
              },
              "alias": null,
              "span": {
                "start": 91,
                "end": 94
              }
            },
            {
              "name": {
                "parts": [
                  "A",
                  "D"
                ],
                "kind": "FullyQualified",
                "span": {
                  "start": 87,
                  "end": 97
                }
              },
              "alias": null,
              "span": {
                "start": 96,
                "end": 97
              }
            }
          ]
        }
      },
      "span": {
        "start": 77,
        "end": 100
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "A",
                  "B",
                  "C",
                  "D"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 104,
                  "end": 112
                }
              },
              "alias": null,
              "span": {
                "start": 109,
                "end": 112
              }
            },
            {
              "name": {
                "parts": [
                  "A",
                  "B",
                  "b",
                  "c"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 104,
                  "end": 126
                }
              },
              "alias": null,
              "kind": "Function",
              "span": {
                "start": 114,
                "end": 126
              }
            },
            {
              "name": {
                "parts": [
                  "A",
                  "B",
                  "D"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 104,
                  "end": 135
                }
              },
              "alias": null,
              "kind": "Const",
              "span": {
                "start": 128,
                "end": 135
              }
            }
          ]
        }
      },
      "span": {
        "start": 100,
        "end": 137
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 137
  }
}
