crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_namespace_groupuseerrors_1.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "Foo",
                  "Bar"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 31,
                  "end": 39
                }
              },
              "alias": null,
              "span": {
                "start": 36,
                "end": 39
              }
            }
          ]
        }
      },
      "span": {
        "start": 27,
        "end": 41
      }
    },
    {
      "kind": {
        "Use": {
          "kind": "Normal",
          "uses": [
            {
              "name": {
                "parts": [
                  "Bar",
                  "Foo"
                ],
                "kind": "Qualified",
                "span": {
                  "start": 45,
                  "end": 53
                }
              },
              "alias": null,
              "span": {
                "start": 50,
                "end": 53
              }
            }
          ]
        }
      },
      "span": {
        "start": 41,
        "end": 55
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 55
  }
}
